--- a/react-cabzda/src/components/Profile/Mine_posts/Mine_posts.module.css
+++ b/react-cabzda/src/components/Profile/Mine_posts/Mine_posts.module.css
@@ -7,3 +7,11 @@
   .minePosts h2 {
     margin: 10px;
   }
+
+  .usersData {
+    padding-left: 10px;
+  }
+
+  .form {
+    display: inline-block;
+  }
